<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/item_news_card_view_margin_bottom">

    <RelativeLayout
        android:id="@+id/item_outer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/item_alarm_clock_layout_padding_top">

        <TextView
            android:id="@+id/item_alarm_clock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ItemTimeTextSize"
            android:background="?android:attr/selectableItemBackground"

            tools:text="7:00"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/item_alarm_clock_inner" />

        <TextView
            android:id="@+id/item_alarm_clock_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/item_alarm_clock_time"
            android:layout_below="@+id/item_alarm_clock_time"

            android:layout_marginBottom="@dimen/item_alarm_clock_text_view_days_margin_bottom"
            android:layout_marginStart="@dimen/item_alarm_clock_day_text_view_margin_start"

            tools:text="Каждый день" />

        <CheckBox
            android:id="@+id/item_alarm_clock_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/item_alarm_clock_time"
            android:layout_alignParentEnd="true"

            android:layout_alignTop="@+id/item_alarm_clock_time"
            android:layout_marginEnd="@dimen/item_alarm_clock_margin_end"
            android:button="?attr/item_alarm_checkbox_drawable" />

        <ImageView
            android:id="@+id/item_alarm_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/item_alarm_clock_check_box"
            android:layout_alignStart="@+id/item_alarm_clock_check_box"
            android:layout_below="@+id/item_alarm_clock_check_box"
            app:srcCompat="@drawable/ic_item_down_image_view" />

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/item_alarm_clock_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/item_alarm_clock_days"
            android:layout_marginEnd="@dimen/item_alarm_clock_margin_end"
            android:layout_marginStart="@dimen/item_alarm_clock_margin_start"
            android:orientation="vertical"
            app:ael_duration="@integer/expand_layout_animation_duration"
            app:ael_expanded="true">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_alarm_clock_inner_layout_margin_bottom"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:justifyContent="space_between">

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_1"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day1"
                    android:textOn="@string/item_check_box_day1"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_2"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day2"
                    android:textOn="@string/item_check_box_day2"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_3"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day3"
                    android:textOn="@string/item_check_box_day3"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_4"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day4"
                    android:textOn="@string/item_check_box_day4"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_5"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day5"
                    android:textOn="@string/item_check_box_day5"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_6"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day6"
                    android:textOn="@string/item_check_box_day6"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/item_alarm_clock_day_7"
                    android:layout_width="@dimen/item_alarm_clock_day_toggle_size"
                    android:layout_height="@dimen/item_alarm_clock_day_toggle_size"
                    android:background="?attr/item_alarm_toggle_drawable"
                    android:textAlignment="center"
                    android:textOff="@string/item_check_box_day7"
                    android:textOn="@string/item_check_box_day7"
                    android:textColor="?attr/toggle_text_drawable"
                    android:textSize="16sp" />

            </com.google.android.flexbox.FlexboxLayout>

            <ImageButton
                android:id="@+id/item_alarm_clock_delete_button"
                android:layout_width="@dimen/item_alarm_clock_delete_button_size"
                android:layout_height="@dimen/item_alarm_clock_delete_button_size"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_marginBottom="@dimen/item_alarm_clock_delete_button_margin_bottom"
                android:scaleType="fitXY"
                android:background="?android:selectableItemBackground"
                app:srcCompat="@drawable/ic_item_alarm_clock_delete" />

        </com.github.aakira.expandablelayout.ExpandableLinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>